<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >


    <TextView
        android:id="@+id/textView"
        style="@style/PageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add/Edit Venue" />

    <TextView
        android:id="@+id/add_venue_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Venue Name (required)" />

    <EditText
        android:id="@+id/add_venue_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/add_venue_address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/add_venue_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/add_venue_phone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_num" />

    <EditText
        android:id="@+id/add_venue_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/add_venue_occupancy_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_occupancy" />

    <EditText
        android:id="@+id/add_venue_occupancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/add_venue_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/add_venue_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textLongMessage" />

    <Button
        android:id="@+id/add_venue_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>