<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/seafoam"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/event_page_buttons"
        android:orientation="horizontal">

        <Button
            android:id="@+id/event_page_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_event" />

        <Button
            android:id="@+id/event_page_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_event" />

    </LinearLayout>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:context="com.rlyth.eventplanner.EventPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_above="@id/event_page_buttons"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_page_name"
            style="@style/EntryPageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/host" />


        <TextView
            android:id="@+id/event_page_host"
            style="@style/EntryPageSubItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/na"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Where" />


        <TextView
            android:id="@+id/event_page_location"
            android:text="@string/na"
            style="@style/EntryPageSubItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="When" />


        <TextView
            android:id="@+id/event_page_date"
            style="@style/EntryPageSubItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/na" />


        <TextView
            android:id="@+id/event_page_att_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/notes" />

        <TextView
            android:id="@+id/event_page_notes"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/na"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>